<resources>
    <string name="app_name">Smart Salez</string>
    <string name="reg_url">https://smartsalez.in/account/MarathonRegistration?ConsumerId=</string>
    <string name="title_stores">SHOP</string>
    <string name="title_search">SEARCH</string>
    <string name="title_history">HISTORY</string>
    <string name="title_cart">CART</string>
    <string name="title_account">ACCOUNT</string>
    <string name="caption">Reliable &amp; Robust Virtual Store</string>
    <string name="new_user"><u>New User?</u></string>
    <string name="currency">\u20B9</string>
    <string name="KM">KM</string>
    <string name="note">Note: Transport charges as applicable for the delivery ranging from Rs 1000 to Rs 5000 depend upon your location</string>
    <string name="condition"></string>
    <string name="Kilometer">Kilometer</string>
    <string name="FuelType">Fuel Type</string>
    <string name="Owner">Owner</string>
    <string name="Ownership">Ownership</string>
    <string name="KMDriven">KM Driven</string>
    <string name="RTD">RTO</string>
    <string name="Cart">Cart</string>
    <string name="Change">Change</string>
    <string name="Scheduled">Scheduled</string>
    <string name="BodyType">Body Type</string>
    <string name="SUV">SUV</string>
    <string name="Hatchback">Hatchback</string>
    <string name="Sedan">Sedan</string>
    <string name="Micro">Micro</string>
    <string name="Convertable">Convertable</string>
    <string name="Couple">Couple</string>
    <string name="Vintage">Vintage</string>
    <string name="Truck">Truck &amp; Mini Van</string>
    <string name="Scooter">Scooter</string>
    <string name="Bike">Bike</string>
    <string name="Sports">Sports</string>
    <string name="Cruiser">Cruiser</string>
    <string name="OffRoad">Off Road</string>
    <string name="loan_insurance">Loan &amp; Insurance</string>
    <string name="ModelYear">Model Year</string>
    <string name="MakeModel">Make/Model</string>
    <string name="SearchModel">Search Model</string>
    <string name="ProductsNotAvailable">Products Not Available</string>
    <string name="NoRecordsAvailable">No Records Available</string>
    <string name="DeliveryNow">Delivery Now</string>
    <string name="DeliveryDate">Delivery Date</string>
    <string name="DeliveryType">Delivery Type</string>
    <string name="DeliveryCharge">Delivery Charge</string>
    <string name="PLACEORDER">PLACE ORDER</string>
    <string name="APPLYCOUPON">APPLY COUPON</string>
    <string name="CouponCode">Coupon Code</string>
    <string name="ToPay">To Pay</string>
    <string name="NoShops">No Shops</string>
    <string name="AddressEmpty">Address Empty</string>
    <string name="TotalQty">Total Qty</string>
    <string name="TotalPrices">Total Prices</string>
    <string name="CartEmpty">Cart Empty</string>
    <string name="OrderHistory">Order History</string>
    <string name="ProductDetails">Product Details</string>
    <string name="DeliveryInstruction">Delivery Instruction</string>
    <string name="DeliveryTimings">Delivery Timings</string>
    <string name="DeliveryDetails">Delivery Details</string>
    <string name="PaymentMode">Payment Mode</string>
    <string name="Delete">Delete</string>
    <string name="TotalAmount">Total Amount</string>
    <string name="OrderDeliveryApprox">Delivery Time Approx</string>
    <string name="OrderPicked">Order Picked</string>
    <string name="Products">Products</string>
    <string name="Product">Product</string>
    <string name="Orderstatus">Order Status</string>
    <string name="orderamount">Order Amount</string>
    <string name="Amountpaid">Amount to be Paid</string>
    <string name="EnterItemNames">Enter Item Names</string>
    <string name="ScanOrder">Scan Order</string>
    <string name="OrderPlaced">Order Placed</string>
    <string name="AddMoreItems">Add More Items</string>
    <string name="CouponDiscount">Coupon Discount</string>
    <string name="YouSave">You Save</string>
    <string name="FromDate">From Date</string>
    <string name="ToDate">To Date</string>
    <string name="TotalPrice">Total Price</string>
    <string name="RegYear">Reg Year</string>
    <string name="Transmission">Transmission</string>
    <string name="Insurance">Insurance</string>
    <string name="InsuranceType">Insurance Type</string>
    <string name="ContactSeller">Contact Seller</string>
    <string name="AmInterested">I\'m Interested</string>
    <string name="QuoteYourPrice">Quote Your Price</string>
    <string name="EnterQuoteYourPrice">Enter Your Quote</string>
    <string name="registration">Registration</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="EnterReview">Enter Review</string>
    <string name="login_caps">Login</string>
    <string name="Budget">Budget</string>
    <string name="forget_pin">Forgot Password</string>
    <string name="no_of_orders">No of Orders</string>
    <string name="order_no">Order No : </string>
    <string name="pickup_time">Pickup Time : </string>
    <string name="no_of_items">No of Items : </string>
    <string name="bill">Bill</string>
    <string name="total">Total</string>
    <string name="Gallery">Gallery</string>
    <string name="payment">Payment</string>
    <string name="delivered">Delivered</string>
    <string name="amount">Amount</string>
    <string name="discount">Discount</string>
    <string name="net">Net</string>
    <string name="pending">Pending</string>
    <string name="settled">Settled</string>
    <string name="shop_name">Shop Name</string>
    <string name="address_1">Address 1</string>
    <string name="address_2">Address 2</string>
    <string name="state">State</string>
    <string name="emi_start">EMI Starts from</string>
    <string name="contact_person_no">Contact Person No</string>
    <string name="website">Website</string>
    <string name="pan_no">PAN No</string>
    <string name="gst_no">GST No</string>
    <string name="tin_no">TIN No</string>
    <string name="permit_no">Permit Room No</string>
    <string name="item_total">Item Total</string>
    <string name="total_discount">Total Discount</string>
    <string name="to_pay">To Pay</string>
    <string name="Search">Search</string>
    <string name="Cancel">Cancel</string>
    <string name="Review">Review</string>
    <string name="TOTAL">TOTAL</string>
    <string name="Recentorders">Recent Orders</string>
    <string name="check_internet">Please Check your Internet</string>
    <string name="server_error">Server Error</string>
    <string name="timeout_error">TimeOut Error</string>
    <string name="NoItemsAvailable">No Items Available</string>
    <string name="SelectBodyType">Select Body Type</string>
    <string name="star">\u2605</string>
    <string name="free_delivery">Free Delivery for first order. Free delivery for order amount greater than 1000</string>
    <string name="agree_continue">Agree &amp; Continue</string>
    <string name="terms_conditon"><u>Terms &amp; Condition</u></string>
    <string name="terms_conditon_cart"><u>I Agree Shop T&amp;C</u></string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="register_now">Register</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="Call"><u>Call</u></string>
    <string name="rememberme">Remember Me</string>
    <string name="save">Save</string>
    <string name="cat_not_available">Category Not Available</string>
    <string name="wishlist_empty">Wishlist Empty</string>
    <string name="enable_gps">Your GPS seems to be disabled, Please enable it</string>
    <string name="user_location_permission_explanation">Allow Permission</string>
    <string name="user_location_permission_not_granted">Permission Failed</string>
    <string name="access_token">pk.eyJ1IjoiaWZmcmFuIiwiYSI6ImNrY2x6cGZheDJhZW4zNW54ZnZhNXplZDMifQ.ddNM8CkD9ehDiuRS9aDpsA</string>
    <string name="enter_oldpass">OLD PASSWORD</string>
    <string name="enter_newpass">NEW PASSWORD</string>
    <string name="enter_cpass">CONFIRM PASSWORD</string>
    <string name="want_to_logout">Are you sure, You want to logout?</string>
    <string name="enter_mobile_no">Enter Mobile Number</string>
    <string name="enter_valid_mobileno">Enter Valid Mobile Number</string>
    <string name="mobile_no">MOBILE NUMBER</string>
    <string name="Password">PASSWORD</string>
    <string name="enter_order_no">Enter Order No</string>
    <string name="mobile_otp">Enter Mobile OTP</string>
    <string name="otp">OTP</string>
    <string name="removecart">Do you want to remove items from cart?</string>
    <string name="clicked_symbol_toast">clicked_symbol_toast</string>
    <string name="long_clicked_symbol_toast">long_clicked_symbol_toast</string>
    <string name="symbol_listener_instruction_toast">symbol_listener_instruction_toast</string>
    <string name="low_to_high">Low To High</string>
    <string name="high_to_low">High To Low</string>
    <string name="Rating">Rating</string>
    <string name="default_notification_channel_id">0</string>
    <string name="NewCar">New Car</string>
    <string name="NewBike">New Bike</string>
    <string name="FindCar">Find Car</string>
    <string name="FindCars">Find Cars</string>
    <string name="FindBikes">Find Bikes</string>
    <string name="UsedCar">Used Car</string>
    <string name="UsedBike">Used Bike</string>
    <string name="Location">Location</string>
    <string name="CustomerRating">Rating</string>
    <string name="Price">Price</string>
    <string name="Temperature">Temperature</string>
    <string name="TemperatureDate">Temperature Date</string>
    <string name="FEName">FEName</string>
    <string name="FEDetails">FE Details</string>
    <string name="ShopsOffer">Shops With Offer</string>
    <string name="DoorStep">Door Step Car Delivery</string>
    <string name="Name">Name</string>
    <string name="ContactNo">Contact No</string>
    <string name="Address">Address</string>
    <string name="ContactPerson">Contact Person</string>
    <string name="Pincode">Pincode</string>
    <string name="Hours">Hours</string>
    <string name="Mobile">Mobile</string>
    <string name="Close">Close</string>
    <string name="Filters">Filters</string>
    <string name="Filter">Filter</string>
    <string name="Select">Select</string>
    <string name="Edit">Edit</string>
    <string name="More">More</string>
    <string name="AddNewAddress">+ Add New Address</string>
    <string name="SetDefault">Set Default</string>
    <string name="DefaultAddress">Default Address</string>
    <string name="PickLocation">Pick Location</string>
    <string name="Description">Description</string>
    <string name="Specification">Specification</string>
    <string name="Feedback">Feedback</string>
    <string name="Profile">Profile</string>
    <string name="BestOffers">Best Offers</string>
    <string name="ShopBy">Shop By</string>
    <string name="SortBy">Sort By</string>
    <string name="Viewandupdate">View and update</string>
    <string name="Explore">Explore</string>
    <string name="ManageYourOrders">Manage Your Orders</string>
    <string name="Update">Update</string>
    <string name="Shop">Shop</string>
    <string name="ScanShopQR">Scan Shop QR</string>
    <string name="Delivery">Delivery</string>
    <string name="ScanshopQRcode">Scan shop QR code</string>
    <string name="Add">Add</string>
    <string name="Wishlist">Wishlist</string>
    <string name="Completeyourwishlist">Complete your wishlist</string>
    <string name="ChangePassword">Change Password</string>
    <string name="set_pin">SET PASSWORD</string>
    <string name="name">NAME *</string>
    <string name="mobile">MOBILE*</string>
    <string name="address_one">ADDRESS 1*</string>
    <string name="address_two">ADDRESS 2</string>
    <string name="landmark">LANDMARK</string>
    <string name="city">CITY *</string>
    <string name="pincode">PINCODE*</string>
</resources>