<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_store"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_stores" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search" />
    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/cart"
        android:title="@string/title_cart"
         />
    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/history"
        android:visible="false"
        android:title="@string/title_history" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/account"
        android:title="@string/title_account" />

</menu>
