<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <include layout="@layout/logo_layout" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1.2">

        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/registration"
            android:textStyle="bold"
            android:textSize="20dp" />
        <EditText
            android:id="@+id/mobile_no"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/mobile_no"
            android:inputType="number"
            android:textSize="15dp"
            android:maxLength="10"
            android:drawablePadding="5dp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_stay_current_portrait_black_24dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_gray"
            android:background="@drawable/editbg_new" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/set_pin"
            android:inputType="textPassword"
            android:maxLength="10"
            android:textSize="15dp"
            android:textStyle="bold"
            android:drawablePadding="5dp"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_gray"
            android:background="@drawable/editbg_new" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/otp"
            android:inputType="number"
            android:maxLength="10"
            android:drawablePadding="5dp"
            android:textSize="15dp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/ic_stay_current_portrait_black_24dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_gray"
            android:background="@drawable/editbg_new" />
        <Button
            android:id="@+id/btn_register"
            style="@style/button"
            android:background="@drawable/border_btnbg_orange"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/register_now" />
        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="@color/white"
            android:text="@string/login"
            android:textStyle="bold"
            android:textSize="24dp" />
    </LinearLayout>

</LinearLayout>