<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <include layout="@layout/logo_layout" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold"
            android:visibility="gone" />

        <EditText
            android:id="@+id/mobile_no"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/editbg_new"
            android:drawableLeft="@drawable/ic_stay_current_portrait_black_24dp"
            android:drawablePadding="5dp"
            android:hint="@string/enter_mobile_no"
            android:inputType="number"
            android:maxLength="10"
            android:paddingLeft="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_gray"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btn_register"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@drawable/border_btnbg_orange"
            android:text="@string/submit" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>

</LinearLayout>