<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <include layout="@layout/logo_layout" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="2">

        <TextView
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/button_gray"
            android:text="@string/condition"
            android:textStyle="italic"
            android:textSize="15dp" />
        <Button
            android:id="@+id/btn_register"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/border_btnbg_orange"
            android:layout_margin="20dp"
            android:text="@string/agree_continue" />

        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/button_gray"
            android:text="@string/terms_conditon"
            android:textStyle="bold"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>