<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/app_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:textAlignment="viewEnd"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logos"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ease_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logos"
            android:gravity="center"
            android:text="@string/caption"
            android:textColor="@color/new_gray"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.3"
        android:orientation="vertical">

        <EditText
            android:id="@+id/mobile_no"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext_bg"
            android:drawableLeft="@drawable/ic_stay_current_portrait_black_24dp"
            android:drawablePadding="5dp"
            android:hint="@string/mobile_no"
            android:inputType="number"
            android:maxLength="10"
            android:padding="10dp"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textColor="@color/button_gray"
            android:textColorHint="@color/hint_gray"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/pin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edittext_bg"
            android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
            android:drawablePadding="5dp"
            android:hint="@string/Password"
            android:textAllCaps="true"
            android:inputType="textPassword"
            android:maxLength="10"
            android:padding="10dp"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textColor="@color/button_gray"
            android:textColorHint="@color/hint_gray"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_login"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border_btnbg_orange"
            android:text="@string/login_caps" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/rememberme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/white"
                android:text="@string/rememberme"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/forget_pin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forget_pin"
                android:textAlignment="viewEnd"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/new_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>