<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    android:orientation="vertical">
    <include layout="@layout/toolbar" />
    <EditText
        android:id="@+id/old_pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittext_bg"
        android:drawablePadding="5dp"
        android:hint="@string/enter_oldpass"
        android:inputType="textPassword"
        android:textStyle="bold"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textColor="@color/button_gray"
        android:textColorHint="@color/hint_gray"
        android:textSize="15dp" />
    <EditText
        android:id="@+id/new_pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textStyle="bold"
        android:drawablePadding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/enter_newpass"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:textAlignment="viewStart"
        android:textColor="@color/button_gray"
        android:textColorHint="@color/hint_gray"
        android:textSize="15dp" />
    <EditText
        android:id="@+id/confirm_pass"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:drawablePadding="5dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/enter_cpass"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:singleLine="true"
        android:textStyle="bold"
        android:textAlignment="viewStart"
        android:textColor="@color/button_gray"
        android:textColorHint="@color/hint_gray"
        android:textSize="15dp" />

    <Button
        android:id="@+id/btn_save"
        style="@style/button"
        android:background="@drawable/border_btnbg_orange"
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:text="@string/save" />
</LinearLayout>